--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,19 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('homepage') }}">Accueil</a>
+                        <a class="nav-link active" aria-current="page" href="{{ relative_path('/') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('nouvelle_partie') }}">Nouvelle Partie</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('partie_en_cours') }}">Parties en cours</a>
+                        <a class="nav-link" href="">Parties en cours</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('profil') }}">Mon profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('deconnexion') }}">Déconnexion</a>
+                        <a class="nav-link" href="">Déconnexion</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
 
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">@David Annebicque 2021 - Projet S4D.</span>
+        <span class="text-muted">- Projet S4D.</span>
     </div>
 </footer>
 
