--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %} - Ninja Taisen</title>
+    <title>{% block title %}Welcome!{% endblock %} - BattleMonster</title>
     {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
     {% block stylesheets %}
@@ -18,7 +18,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Ninja Taisen</a>
+            <a class="navbar-brand" href="#">Battle Monster</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="{{ path('profil') }}">Mon profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Déconnexion</a>
+                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                     </li>
                 </ul>
             </div>
@@ -50,18 +50,18 @@
         <div class="mt-5">
             <br>
             {% block body %}
-                Coucou
+
 
             {% endblock %}
         </div>
     </div>
 </main>
 
-<footer class="footer mt-auto py-3 bg-light">
+<!--<footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted">- Projet S4D.</span>
+
     </div>
-</footer>
+</footer>-->
 
 </body>
 </html>
