--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,63 +5,87 @@
     <title>{% block title %}Welcome!{% endblock %} - BattleMonster</title>
     {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
+        <link rel="stylesheet" href="{{ asset('build/plateau.css') }}">
+
     {% endblock %}
 
     {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
+       {#  {{ encore_entry_script_tags('app') }}#}
     {% endblock %}
 </head>
 <body {% block data_body %}{% endblock %}>
 <header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Battle Monster</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ relative_path('/') }}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('nouvelle_partie') }}">Nouvelle Partie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Parties en cours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('profil') }}">Mon profil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-                    </li>
-                </ul>
-            </div>
+    <nav>
+        <a href="index.php"><img src="{{  asset('assets/img/logohaut.png')}}" alt="Logo"></a>
+        <div>
+            <ul>
+                <li>
+                    <a href="{{ relative_path('/') }}" id="active">Accueil</a>
+                </li>
+                <li>
+                    <a href="{{ path('nouvelle_partie') }}">Nouvelle Partie</a>
+                </li>
+                <li>
+                    <a href="{{ path('partie_en_cours') }}">Parties en cours</a>
+                </li>
+                <li>
+                    <a href="{{ path('profil') }}">Mon profil</a>
+                </li>
+                <li>
+                    <a href="{{ path('app_logout') }}">Déconnexion</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
 <!-- Begin page content -->
-<main class="flex-shrink-0">
-    <div class="container">
-        <div class="mt-5">
-            <br>
+
             {% block body %}
 
 
             {% endblock %}
-        </div>
-    </div>
-</main>
+
 
 <!--<footer class="footer mt-auto py-3 bg-light">
     <div class="container">
 
     </div>
 </footer>-->
-
+<footer>
+    <div>
+        <img src="{{ asset('assets/img/logo.png') }}" alt="Logo">
+        <div id="link">
+            <ul>
+                <li>
+                    <a href="{{ relative_path('/') }}" id="active">Accueil</a>
+                </li>
+                <li>
+                    <a href="{{ path('nouvelle_partie') }}">Nouvelle Partie</a>
+                </li>
+                <li>
+                    <a href="">Parties en cours</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="{{ path('profil') }}">Mon profil</a>
+                </li>
+                <li>
+                    <a href="doc/mentionslegales.pdf" target="_blank">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="doc/politique_de_donnees.pdf" target="_blank">Politique de données</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <p>Monsters Battle ©2021</p>
+</footer>
 </body>
 </html>
