--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -4,4 +4,9 @@
 
 {% block body %}
 <h1>Profil</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+
+        <p>Bienvenue Mathis</p>
+
+    {% endif %}
 {% endblock %}
